--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
+  <title>MFriesen - Leaflet Earthquake Mapping Challenge</title>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -17,10 +17,15 @@
 </head>
 
 <body>
-
+  <!-- tried adding a header but it looked terrible
+  <div id="navbar">
+	<h1>Map of Earthquakes</h1>
+  </div>
+  <div id="container"> -->
   <!-- The div that holds our map -->
   <div id="mapid"></div>
-
+  <!-- the closing tags for the attempt at making a header: </div> -->
+  
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
